--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,89 @@ h2 {
   font-weight: 700;
   font-family: "PT Sans Narrow", "Arial", sans-serif;
 }
+
+.clearfix {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.container {
+  width: 940px;
+  padding: 0 10px 0 10px;
+  margin: 0 auto;
+}
+
+/********************************************************               catalog.html                          ********************************************************/
+
+/*Шапка*/
+
+.inner-navigation {
+  float: left;
+}
+
+.inner-header .user-block {
+  float: right;
+}
+
+/*Фильтры*/
+
+.filters {
+  float: left;
+  width: 220px;
+  margin-right: 20px;
+}
+
+/*Товары*/
+
+.goods {
+  float: right;
+  width: 700px;
+  font-size: 0;
+}
+
+.goods-item {
+  display: inline-block;
+  width: 220px;
+  margin-right: 20px;
+}
+
+.goods-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+/*Пагинатор*/
+
+.page-selector {
+  clear: both;
+}
+
+/*Подвал*/
+
+.footer-contacts {
+  float: left;
+  width: 320px;
+  margin-right: 80px;
+}
+.footer-social {
+  float: left;
+  width: 200px;
+}
+.footer-copyright {
+  float: right;
+  width: 140px;
+}
+
+/********************************************************               catalog-item.html                          ********************************************************/
+
+/*Блок выбранного товара*/
+
+.item-gallery {
+  float: left;
+  width: 460px;
+  margin-right:90px;
+}
+.item-details {
+  float: right;
+  width: 390px;
+}
